# Aria

./: ## GitHub Copilot Chat.md  .env  .env.example  .flake8  .funcignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .nojekyll  .pre-commit-config.yaml  .prettierrc  .task_complete  ADVANCED_AUTOMATION.md  ADVANCED_FEATURES_GUIDE.md  AGENTS.md  AGENT_QUICKSTART.md  AI_DATASETS_CATALOG.md  AI_IMPROVEMENTS_SUMMARY.md  AI_SYNTAX_FIXES.md  ARIA_AUTOMATION_GUIDE.md  ARIA_AUTOMATION_SUMMARY.md  ARIA_DEMOS_SUMMARY.md  ARIA_QUICKREF.txt  AUTOMATIC_AUTOMATION_GUIDE.md  AUTOMATION_FEATURES_SUMMARY.md  AUTOMATION_RUNNER.md  AUTONOMOUS_AGENT_GUIDE.md  AUTONOMOUS_AGENT_IMPLEMENTATION.md  AUTONOMOUS_ORCHESTRATOR_MODEL.md  AUTOTRAIN_README.md  Aria.sln  AzuriteConfig  CHANGELOG.md  CHAT_IMPROVEMENTS.md  CHAT_WEBSITE_GUIDE.md  CHAT_WEBSITE_SUCCESS.md  CODEGEN_REPORT.md  CONTRIBUTING.md  DASHBOARD_CONSOLIDATION.md  (+131 more)
.azureml/: environment.yml  job_dummy.yaml  job_multi_20251125T012515Z.yaml  job_multi_20251125T012559Z.yaml  job_multi_20251125T055919Z.yaml
.devcontainer/: Dockerfile  devcontainer.json
.foundry/: .deployment.json
.githooks/: README.md  pre-commit  pre-commit.ps1
.github/: CICD_TESTING.md  CI_QUICK_REF.md  CODEOWNERS  CODE_GENERATION_GUIDE.md  COPILOT.md  COPILOT_ADVANCED_CUSTOMIZATION.md  COPILOT_SETUP_GUIDE.md  COPILOT_VALIDATION_CHECKLIST.md  FUNDING.yml  GITHUB_ACTIONS_QUICKREF.txt  GITHUB_ACTIONS_SETUP.md  MCP_SERVERS_REFERENCE.md  PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  copilot-cheatsheet.md  copilot-instructions.full.md  copilot-instructions.md  copilot.yml  dependabot.yml  labeler.yml  pr-description.md
.openclaw/: workspace-state.json
ai_projects/: __init__.py
apps/: global-upgrade.css
aria-bot/: README.md
aria_web/: AUTO-EXECUTE.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  __init__.py  aria_controller.js  aria_enhancements.js  auto-execute.html  demo-movement.html  index.html  quantum-portal.html  quantum-world.html  quantum_3d_bridge.py  quantum_world_generator.py  server.py  test_auto_execute.py
chat-web/: README.md  aria.html  chat.js  index.html  start-backend.html
config/: aria_automation.service  aria_bot.yaml  autonomous_training.yaml  azure_monitor_alerts.json  dataset-requirements.txt  master_orchestrator.yaml  notification_config.yaml  quantum_autorun.yaml  quantum_llm_config.yaml  quantum_llm_config_example.yaml
cooking-ai/: requirements.txt
core/: __init__.py  __main__.py  agent.py  bus.py  notifications.py  queue.py  registry.py  router.py  runner.py  task.py
dashboard/: README.md  advanced.html  analytics.html  analytics.html.backup  anomaly-detector.js  app.py  consolidated.html  enhanced.html  gguf_visualizer.html  gpu_monitor.py  hub.html  hyperparameter-optimizer.js  index.html  index.html.backup  keyboard-nav.js  model-comparator.js  serve.py  serve_gguf_viz.py  session-history.js  shared-theme.css  unified.html  unified.html.backup  websocket_server.py
data_out/: ai_token_status.json  aria_forever_watchdog_heartbeat.json  aria_forever_watchdog_state.json  autonomous_training_heartbeat.json  autonomous_training_status.json  fast_validate_results.json  integration_detailed.txt  integration_test_output.txt  llm_endpoint_probe.json  multi_agent_run_tasks.json  task_complete.json  task_complete.marker  test_failures.txt  tmp_multi_agent_tasks.json  training_metrics.csv
database/: README.md  database.sqlproj
datasets/: dataset_index.json
deployed_models/: LATEST.txt  chat_model_v1.json  chat_model_v2.json  chat_model_v3.json  chat_model_v4.json  chat_model_v5.json  chat_model_v6.json  chat_model_v7.json  chat_model_v8.json  chat_model_v9.json
docs/: 404.html  AI_CAPABILITY_RUNBOOK.md  AUTO_OPS_DASHBOARD.md  CODE_INEFFICIENCY_ANALYSIS_2026-02-17.md  DEPLOYMENT_GUIDE.md  FUTURE_PERFORMANCE_OPPORTUNITIES.md  FUTURE_PERFORMANCE_OPTIMIZATIONS.md  GGUF_COMPLETE.md  GGUF_VISUALIZATION.md  GGUF_VISUALIZATION_SUMMARY.md  GITHUB_PAGES_SETUP.md  LMSTUDIO_AGI_INTEGRATION_STATUS.md  OPTIMIZATION_QUICK_GUIDE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_CRITICAL_FIXES_2026.md  PERFORMANCE_FINDINGS_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_GUIDE.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS_REPORT.md  README.md  (+33 more)
(+3817 files in other folders)
