[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aria"
version = "0.0.0"
description = "Aria — Interactive AI Character Platform"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.13.4",
  "pydantic-settings>=2.4.0",
  "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "pytest-asyncio>=1.2.0",
  "watchdog>=6.0.0",
  "pre-commit>=4.3.0",
  "ruff>=0.15.13",
  "black>=25.11.0",
  "isort>=6.1.0",
  "mypy>=1.19.1",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.0.0",
  "tenacity>=9.1.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # E501 is redundant — Black auto-formats line length

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]   # F811 (redefinition of unused name) is intentional for pytest fixtures
"scripts/*" = ["T201"] # allow print() in scripts

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | data_out
  | mount
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["venv*", "data_out*", "mount*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = false
exclude = ["data_out/", "mount/", "venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
markers = [
  "unit: Unit tests",
  "slow: Slow tests that may take significant time",
  "azure: Tests requiring Azure services",
  "integration: Integration tests",
  "e2e: End-to-end tests",
  "playwright: Tests using Playwright browser automation",
  "pyppeteer: Tests using Pyppeteer browser automation",
  "selenium: Tests using Selenium browser automation",
]
